--- a/gameover.html
+++ b/gameover.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="lose.css">
 </head>
   <script>
-    var beast = new Audio('sound/beastend.mp3');
+    var beast = new Audio("sound/beastend.mp3");
     beast.play();
   </script>
   
