--- a/report.html
+++ b/report.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h2>Submit a Report</h2>
-    <form action="submit_report.php" method="post">
+    <form action="https://reportscmg.000webhostapp.com/submit_report.php" method="post">
         <label for="reporter_name">Your Name:</label><br>
         <input type="text" id="reporter_name" name="reporter_name" required><br><br>
         
