--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
     <footer style="margin-top: 20px; font-size: 0.8em; color: #999;">
         &copy; 2024 CMG by <a href="/my-bio" style="text-decoration: none; color: inherit;">Fethlex</a>
     </footer>
+     <button onclick="startGame()">Start Game</button>
+     function startGame() {
+            // Add any logic or redirection you need to start the game
+            alert("Let the CMG Game begin!");
+            window.location.href = "/level1.html";
+          
+        }
     <script>
         document.getElementById("reportButton").addEventListener("click", function() {
             window.location.href = "/report.html";
